use 'WorkflowRun' (or 'workflow_run') in all locations instead of 'Run'; fix some other typos
